--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   },
   "dependencies": {
     "astro": "^5.1.10"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0"
   }
 }
