--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.0.7",
+    "@astrojs/tailwind": "^5.1.5",
     "astro": "^5.1.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^3.4.17"
   }
 }
